# hashtable

./: CMakeLists.txt  Makefile  config.h  crc_hash_asm.s  hashtable.cpp  hashtable.h  main_perf_crc.cpp  main_perf_crc_asm.cpp  main_perf_crc_u16.cpp  main_perf_gnu.cpp  main_perfomance.cpp  main_poptest.cpp  readme.md
lib/: String.cpp  String.h  asserts.h  file_read.cpp  file_read.h  parseArg.cpp  parseArg.h
run/: .~lock.pop_data.ods#  calc_graph.py  callgrind.out.31554  callgrind.out.57084  callgrind.out.63606  callgrind.out.76977  callgrind.out.77846  callgrind.out.78085  callgrind.out.v-1(bugged)  callgrind.out.v0  callgrind.out.v00  callgrind.out.v01  callgrind.out.v1  callgrind.out.v2  callgrind.out.v3  callgrind.out.v4  callgrind.out.v5_  callgrind.out.v5n  callgrind.out.v6  callgrind.out.v7  callgrind.out.v8  perftest.elf  perftest_v0  perftest_v1_avx  perftest_v2_align  perftest_v3_nolen  perftest_v4  perftest_v5  perftest_v6_asm  perftest_v7_final  perftest_v8_size  pop_data.ods  pop_data.txt  poptest.elf
v0/: hashtable.h  hashtable_v0.cpp
v1_avx/: hashtable_v1.cpp
v2_align/: hashtable_v2.cpp
v3_nolen/: hashtable.cpp  hashtable.h
v7_final/: hashtable.cpp  hashtable.h  main_perf_final.cpp
